--- a/.github/workflows/latest-weekly.yaml
+++ b/.github/workflows/latest-weekly.yaml
@@ -34,3 +34,4 @@ jobs:
           commit-message: 'chore(deps): bump jenkins weekly to ${{ steps.update.outputs.jenkins_version }}'
           signoff: false
           title: 'chore(deps): bump jenkins weekly to ${{ steps.update.outputs.jenkins_version }}'
+          branch: latest-weekly
