--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -15,6 +15,12 @@ jobs:
       - name: Update
         uses: garethjevans/uc@0.1.0
 
+      - uses: tibdex/github-app-token@v1
+        id: generate-token
+        with:
+          app_id: ${{ secrets.JENKINS_ADMIN_APP_ID }}
+          private_key: ${{ secrets.JENKINS_ADMIN_APP_PRIVKEY }}
+
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
@@ -23,3 +29,4 @@ jobs:
           signoff: false
           title: 'chore(deps): update plugins'
           branch: update-plugins
+          token: ${{ steps.generate-token.outputs.token }}
