--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Update
-        uses: garethjevans/uc@0.1.0
+        uses: jenkins-infra/uc@0.1.1
 
       - uses: tibdex/github-app-token@v1
         id: generate-token
