--- a/cst.yml
+++ b/cst.yml
@@ -16,3 +16,9 @@ fileExistenceTests:
   - name: 'default plugin - configuration-as-code'
     path: '/usr/share/jenkins/ref/plugins/configuration-as-code.jpi'
     shouldExist: true
+  - name: 'Azure VM Agents'
+    path: '/usr/share/jenkins/ref/plugins/azure-vm-agents.jpi'
+    shouldExist: true
+  - name: 'Azure Container Agents'
+    path: '/usr/share/jenkins/ref/plugins/azure-container-agents.jpi'
+    shouldExist: true
