feat: add opentelemetry capability
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/cst.yml
+++ b/cst.yml
@@ -16,3 +16,6 @@ fileExistenceTests:
   - name: 'default plugin - configuration-as-code'
     path: '/usr/share/jenkins/ref/plugins/configuration-as-code.jpi'
     shouldExist: true
+  - name: 'OpenTelemetry Plugin'
+    path: '/usr/share/jenkins/ref/plugins/opentelemetry.jpi'
+    shouldExist: true
