--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -29,5 +29,7 @@ jobs:
           commit-message: 'chore(deps): update plugins'
           signoff: false
           title: 'chore(deps): update plugins'
+          author: jenkins-infrastructure-admin <83065101+jenkins-infrastructure-admin[bot]@users.noreply.github.com>
+          committer: jenkins-infrastructure-admin <83065101+jenkins-infrastructure-admin[bot]@users.noreply.github.com>
           branch: update-plugins
           token: ${{ steps.generate-token.outputs.token }}
