--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -1,5 +1,5 @@
 ---
-name: update
+name: Update plugins
 
 on:
   schedule:
@@ -12,9 +12,14 @@ jobs:
     steps:
       - name: Check out source code
         uses: actions/checkout@v3
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 11
 
-      - name: Update
-        uses: jenkins-infra/uc@0.1.4
+      - run: ./bin/update-plugins-docker.sh
+        name: Update plugins
 
       - uses: tibdex/github-app-token@v1.5
         id: generate-token
