--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -19,6 +19,7 @@ jobs:
           java-version: 11
 
       - run: ./bin/update-plugins.sh
+        id: update-plugins
         name: Update plugins
 
       - uses: tibdex/github-app-token@v1.5
@@ -34,7 +35,12 @@ jobs:
           commit-message: 'chore(deps): update plugins'
           signoff: false
           title: 'chore(deps): update plugins'
-          author: jenkins-infrastructure-admin <83065101+jenkins-infrastructure-admin[bot]@users.noreply.github.com>
-          committer: jenkins-infrastructure-admin <83065101+jenkins-infrastructure-admin[bot]@users.noreply.github.com>
+          author: jenkins-infra-updatecli[bot] <178728+jenkins-infra-updatecli[bot]@users.noreply.github.com>
+          committer: jenkins-infra-updatecli[bot] <178728+jenkins-infra-updatecli[bot]@users.noreply.github.com>
           branch: update-plugins
           token: ${{ steps.generate-token.outputs.token }}
+          body: |
+            Changes:
+            ```diff
+            ${{ steps.tests.update-plugins.stdout }}
+            ```
