fix(workflow): change plugins update check process (#586)
* change plugins update check process

should match the workflow of the docker weekly repo

* Update .github/workflows/latest-weekly.yaml

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

--- a/.github/workflows/latest-weekly.yaml
+++ b/.github/workflows/latest-weekly.yaml
@@ -38,9 +38,10 @@ jobs:
             echo "::set-output name=changed::false"
           fi
 
-      - name: Update
+      - name: Update plugins
+        run: ./bin/update-plugins.sh
         if: ${{ steps.diff.outputs.changed == 'true' }}
-        uses: jenkins-infra/uc@0.1.4
+        id: update-plugins
 
       - uses: tibdex/github-app-token@v1.6
         id: generate-token
