--- a/.github/workflows/plugins-update.yaml
+++ b/.github/workflows/plugins-update.yaml
@@ -42,5 +42,5 @@ jobs:
           body: |
             Changes:
             ```diff
-            ${{ steps.update-plugins.stdout }}
+            ${{ steps.update-plugins.outputs.stdout }}
             ```
