--- a/.github/workflows/plugins-update.yaml
+++ b/.github/workflows/plugins-update.yaml
@@ -39,6 +39,7 @@ jobs:
           committer: jenkins-infra-updatecli[bot] <178728+jenkins-infra-updatecli[bot]@users.noreply.github.com>
           branch: update-plugins
           token: ${{ steps.generate-token.outputs.token }}
+          labels: dependencies,plugins
           body: |
             Changes:
             ```diff
