--- a/.github/workflows/plugins-update.yaml
+++ b/.github/workflows/plugins-update.yaml
@@ -18,7 +18,7 @@ jobs:
           distribution: 'temurin'
           java-version: 11
 
-      - run: echo "::set-output name=stdout::$(./bin/update-plugins.sh)\n"
+      - run: echo "stdout=$(./bin/update-plugins.sh)\n" >> $GITHUB_OUTPUT
         id: update-plugins
         name: Update plugins
 
