--- a/.github/workflows/latest-weekly.yaml
+++ b/.github/workflows/latest-weekly.yaml
@@ -35,7 +35,7 @@ jobs:
           if [[ $(git diff --stat) != '' ]]; then
             echo "changed=true" >> $GITHUB_OUTPUT
           else
-            echo changed=false" >> $GITHUB_OUTPUT
+            echo "changed=false" >> $GITHUB_OUTPUT
           fi
 
       - name: Update plugins
