Revert "Address `set-output` deprecation (#637)"
This reverts commit 7c4eb2c1ce229002367ee3420a48771694ccdb63.

--- a/.github/workflows/plugins-update.yaml
+++ b/.github/workflows/plugins-update.yaml
@@ -18,7 +18,7 @@ jobs:
           distribution: 'temurin'
           java-version: 11
 
-      - run: echo "stdout=$(./bin/update-plugins.sh)\n" >> $GITHUB_OUTPUT
+      - run: echo "::set-output name=stdout::$(./bin/update-plugins.sh)\n"
         id: update-plugins
         name: Update plugins
 
