--- a/.github/workflows/latest-weekly.yaml
+++ b/.github/workflows/latest-weekly.yaml
@@ -33,9 +33,9 @@ jobs:
           git diff
 
           if [[ $(git diff --stat) != '' ]]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
+            echo "::set-output name=changed::true"
           else
-            echo "changed=false" >> $GITHUB_OUTPUT
+            echo "::set-output name=changed::false"
           fi
 
       - name: Update plugins
